ingress_1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
        - path: /aleksei(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: demo-service
              port:
                number: 8000
