ingress_2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress-2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
        - path: /health
          pathType: Prefix
          backend:
            service:
              name: demo-service
              port:
                number: 8000
